plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version '0.20.1'
}

group = 'buncheoleasy'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// Spring MVC 의 @PathVariable / @RequestParam 파라미터 이름 자동 매핑이 가능하도록 컴파일 시 파라미터명을 클래스 파일에 포함.
tasks.withType(JavaCompile).configureEach {
    if (!options.compilerArgs.contains('-parameters')) {
        options.compilerArgs << '-parameters'
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    // application.yaml 을 직접 파싱하는 설정 인바리언트 테스트용. 버전은 Boot BOM 이 관리하고 좌표만 명시한다.
    testImplementation 'org.yaml:snakeyaml'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // H2 Database for testing
    testRuntimeOnly 'com.h2database:h2'
    testImplementation 'org.testcontainers:junit-jupiter:1.20.4'
    testImplementation 'org.testcontainers:mysql:1.20.4'

    // Spring Security
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.27.21')
    implementation 'software.amazon.awssdk:s3'

    // Spring REST Docs + OpenAPI 생성
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.20.1'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    // 테스트는 Gradle 과 별도 JVM 으로 포크된다. 배포 빌드가 도는 t3.small(2GB) 은 앱·프론트·모니터링
    // 컨테이너가 떠 있는 상태라 여유가 ~580MB 뿐이므로, 배포 박스 기준으로 상한을 낮게 잡는다.
    // 여유 있는 로컬·CI 에서는 -PtestMaxHeap=1g 로 올릴 수 있다.
    maxHeapSize = (findProperty('testMaxHeap') ?: '512m').toString()

    // 위 힙 상한과 곱해져 전체 요구량이 되므로, 배포 박스 여유를 넘기지 않도록 1 을 유지한다.
    maxParallelForks = 1

    // 힙만으로는 실사용량(RSS)이 잡히지 않는다. Spring 컨텍스트를 여러 개 띄우면 메타스페이스가 힙과
    // 별개로 수백 MB 까지 오르므로 함께 제한한다.
    jvmArgs "-XX:MaxMetaspaceSize=${findProperty('testMaxMetaspace') ?: '384m'}"

    // Spring TestContext 캐시 기본 크기는 32 라 DocsTest 19개의 컨텍스트가 모두 상주한다.
    // 메모리가 빠듯한 환경에서는 -PtestContextCacheSize 로 줄여 시간과 맞바꾼다.
    if (findProperty('testContextCacheSize')) {
        systemProperty 'spring.test.context.cache.maxSize', findProperty('testContextCacheSize')
    }

    doFirst {
        def agent = configurations.testRuntimeClasspath.find {
            it.name.contains("byte-buddy-agent")
        }
        if (agent != null) {
            jvmArgs "-javaagent:${agent.absolutePath}"
        }
    }
}

openapi3 {
    server = '/'
    title = 'BuncheolEasy API'
    description = '분철이지 API 명세서'
    version = '0.0.1'
    format = 'yaml'
    outputDirectory = 'build/api-spec'
}

tasks.register('copyApiDocs', Copy) {
    dependsOn 'openapi3'
    from("${layout.buildDirectory.get()}/api-spec") {
        include 'openapi3.yaml'
    }
    into "${layout.buildDirectory.get()}/api-docs-static/static/v1/api-docs"
}

tasks.named('bootRun') {
    dependsOn 'copyApiDocs'
    classpath += files("${layout.buildDirectory.get()}/api-docs-static")
}

tasks.named('bootJar') {
    dependsOn 'copyApiDocs'
    from("${layout.buildDirectory.get()}/api-docs-static") {
        into 'BOOT-INF/classes'
    }
}
